# fjalar

./: .gitignore  .hgignore  .travis-build.sh  .travis.yml  Makefile  ProjectHome.md  README  README_DEVELOPERS  auto-everything.sh  azure-pipelines.yml  generate-patch-files.sh  index.html  test.sh  texinfo-spellcheck  texinfo.dict  travis-fail.goal  valgrind-merge.texinfo
doc/: Makefile  README  dyncomp-diagram.emf  dyncomp-diagram.pptx  dyncomp-notes.docx  valgrind-merge.texinfo
valgrind/: .cvsignore  Makefile  Makefile.all.am  Makefile.am  Makefile.flags.am  Makefile.in  Makefile.tool-inplace.am  Makefile.tool.am  Makefile.vex.am  Makefile.vex.in  Makefile~  README  README_DEVELOPERS  REVISION  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.in  default.supp  glibc-2.X.supp  install-sh  rejects  valgrind.pc
valgrind/VEX/: .cvsignore  Makefile
valgrind/addrcheck/: Makefile.in
valgrind/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
valgrind/auxprogs/: .cvsignore  Makefile  Makefile.am  Makefile.in  s390-check-opcodes.pl
valgrind/cachegrind/: .cvsignore  Makefile  Makefile.in  cg-x86-amd64.c  cg_annotate  cg_main.c  cg_merge.c
valgrind/callgrind/: .cvsignore  Makefile  Makefile.in  bbcc.c  callgrind.h  callgrind_annotate.in  callgrind_control.in  debug.c  events.c  events.h  global.h  main.c  sim.c
valgrind/corecheck/: Makefile.in
valgrind/coregrind/: .cvsignore  Makefile  Makefile.in  launcher-linux.c  m_cpuid.S  m_debuglog.c  m_errormgr.c  m_execontext.c  m_libcassert.c  m_libcbase.c  m_libcfile.c  m_libcprint.c  m_libcproc.c  m_libcsignal.c  m_machine.c  m_main.c  m_mallocfree.c  m_options.c  m_oset.c  m_redir.c  m_signals.c  m_sparsewa.c  m_stacks.c  m_stacktrace.c  m_syscall.c  m_tooliface.c  m_trampoline.S  m_translate.c  m_transtab.c  m_vkiscnums.c  m_xarray.c  pub_core_clreq.h  pub_core_debuginfo.h  pub_core_dispatch_asm.h  pub_core_guest.h  pub_core_libcfile.h  pub_core_libcproc.h  pub_core_machine.h  pub_core_mallocfree.h  pub_core_options.h  (+8 more)
valgrind/docs/: Makefile  Makefile.in
valgrind/drd/: .cvsignore  Makefile  Makefile.in  drd.h  drd_barrier.c  drd_bitmap.c  drd_bitmap.h  drd_clientobj.c  drd_clientobj.h  drd_clientreq.c  drd_cond.c  drd_error.c  drd_error.h  drd_load_store.c  drd_main.c  (+13 more)
valgrind/fjalar/: .cvsignore  GenericHashtable.c  GenericHashtable.h  Makefile  Makefile.am  Makefile.am.~1.14.~  Makefile.in  README  README_DEVELOPERS  TODO  bfd.h  bucomm.h  decls-output.c  disambig.c  disambig.h  dwarf.c  dwarf.h  elfcomm.c  elfcomm.h  fjalar_debug.h  fjalar_dwarf.c  fjalar_dwarf.h  fjalar_include.h  fjalar_main.c  fjalar_main.h  fjalar_runtime.c  fjalar_runtime.h  fjalar_select.c  fjalar_select.h  fjalar_tool.h  fjalar_traversal.c  fjalar_traversal.h  generate_fjalar_entries.c  generate_fjalar_entries.c~  generate_fjalar_entries.h  generate_fjalar_entries.h~  mac_leakcheck.c  mac_needs.c  mac_shared.c  mac_shared.h  (+23 more)
valgrind/fjalar/basic-tool/: basic-tool-test.c  basic-tool.c
valgrind/fjalar/bu-include/: dwarf.h
valgrind/fjalar/docs/: Makefile
valgrind/fjalar/docs/fjalar-www/: README  fjalar_include.h.txt  fjalar_manual.htm  fjalar_manual.html  fjalar_stack.xml  fjalar_style.css  fjalar_tool.h.txt  index.html
valgrind/fjalar/documentation/fjalar-www/: fjalar_include.h.txt  fjalar_manual.htm  fjalar_tool.h.txt  index.html
valgrind/fjalar/include/: bucomm.h  config.h  demangle.h
valgrind/fjalar/include/elf/: dwarf2.h  loongarch.h  mips.h  nfp.h  riscv.h
valgrind/fjalar/kvasir/: decls-output.c  decls-output.h  dtrace-output.c  dtrace-output.h  dyncomp_main.c  dyncomp_main.h  dyncomp_runtime.c  dyncomp_runtime.h  dyncomp_translate.c  dyncomp_translate.h  dyncomp_wrappers.c  kvasir_main.c  kvasir_main.h  union_find.c  union_find.h
valgrind/fjalar/kvasir/devel-notes/mods-for-dyncomp/: core_arch.h.dyncomp  mc_main.c  mc_translate.c  mods-for-dyncomp.txt  mods-for-dyncomp.txt~  tool.h.base  tool.h.base.dyncomp  vg_main.c  vg_scheduler.c  vg_scheduler.c.dyncomp
valgrind/fjalar/notes/: .cvsignore  Makefile.release  bdemsky-kvasir-notes.txt  fjalar-devel-notes.txt  fjalar-release-README  fjalar-release-notes.txt  fjalar-release.patch  fjalar.tex  kvasir_valgrind_merge.html  porting-to-valgrind-3.0.1.txt  valgrind_merge.html  valgrind_merge.html.~1.13.~
valgrind/fjalar/notes/archive/: README  kvasir-ASE-notes.txt  valgrind-3-differences.txt  valgrind_merge.html
valgrind/fjalar/notes/design-doc/: .cvsignore  README  fjalar.bbl  fjalar.tex
valgrind/fjalar/tests/: Makefile.am
valgrind/fjalar/tools/: README  merge_explorer.py  merge_tracker.py  merge_utils.py
valgrind/fjalar/trivial-tool/: trivial-tool.c
valgrind/kvasir/: GenericHashtable.c  GenericHashtable.h  Makefile.am  Makefile.in  decls-output.c  decls-output.h  disambig.c  disambig.h  dtrace-output.c  dtrace-output.h  dyncomp_main.c  dyncomp_main.h  dyncomp_runtime.c  dyncomp_runtime.h  dyncomp_translate.c  dyncomp_translate.h  generate_daikon_data.c  generate_daikon_data.h  kvasir_main.c  kvasir_main.h  kvasir_runtime.c  kvasir_runtime.h  mc_include.h  mc_main.c  mc_translate.c  mc_translate.h  readelf.c  typedata.c  typedata.h  union_find.c  union_find.h  union_find_test.c
valgrind/kvasir/doc/: bdemsky-kvasir-notes.txt  dyncomp-devel-notes.txt
valgrind/kvasir/experimental-versions/experimental-array-ptr-version/1/: decls-output.c
valgrind/kvasir/experimental-versions/experimental-array-ptr-version/2/: decls-output.c
valgrind/kvasir/experimental-versions/experimental-array-ptr-version/3/: decls-output.c  dtrace-output.c  dtrace-output.h
valgrind/kvasir/experimental-versions/experimental-array-ptr-version/4/: decls-output.c  dtrace-output.c  kvasir_main.c
valgrind/kvasir/experimental-versions/experimental-array-ptr-version/5/: decls-output.c  decls-output.h  dtrace-output.c  kvasir_main.h
valgrind/kvasir/experimental-versions/experimental-array-ptr-version/6/: decls-output.c  dtrace-output.c  dtrace-output.h
valgrind/kvasir/include/: config.h
vex/: .cvsignore  Makefile
(+388 files in other folders)
